--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
 
     <script type="module" src="main.js"></script>
+    <script type="module" src="todos.js"></script>
 </body>
 
 </html>
