bug en html arreglado

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             <option value="high">Alta</option>
         </select>
         <button id="handleAddTodo">Agregar</button>
-        <input type="text" id="searchInput" placeholder="Buscar tarea...">
         <div class="filter-buttons">
+            <label for="searchInput">Filtra por palabra</label>
+            <input type="text" id="searchInput" placeholder="Buscar tarea...">
             <button id="showAll">Mostrar todas</button>
             <button id="showCompleted">Mostrar completadas</button>
             <button id="showNotCompleted">Mostrar no completadas</button>
